--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -32,7 +32,8 @@ $blue: #4361ee;
   object-fit: cover;
 
   &Full {
-    min-height: 300px;
+    object-fit: scale-down;
+    max-height: 300px;
     height: 100%;
   }
 }
