--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: #3641bf !important; */
   background-color: #F5F5F5 !important;
 }
+  /* background-color: #F5F5F5 !important; */
