--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,5 +1,6 @@
 .root {
   width: 400px;
+ /*  height:100%; */
   padding: 50px;
   border: 1px solid #dedede;
   margin: 50px auto;
@@ -13,4 +14,17 @@
   text-align: center !important;
   font-weight: bold !important;
   margin-bottom: 30px !important;
+}
+.box{
+ /*  display: flex; */
+ min-height: 370px; 
+  width: 800px;
+  color: rgba(10, 48, 238, 0);
+ /*  position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%; */
+}
+.boxx{
+  width:1000px !important
 }
